[package]
name = "better-mini-lsm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
arc-swap = "1"
bytes = "1"
crossbeam-epoch = "0.9"
crossbeam-skiplist = "0.1"
parking_lot = "0.12"
ouroboros = "0.18"
moka = { version = "0.9", features = ["future"] }
clap = { version = "4.4.17", features = ["derive"] }
rand = "0.8.5"
crossbeam-channel = "0.5.11"
serde_json = { version = "1.0" }
serde = { version = "1.0", features = ["derive"] }
farmhash = "1"
nom = "7.1.3"
rustyline = "13.0.0"
replace_with = "0.1.7"
byteorder = "1.5.0"
either = "1.10.0"
derive-new = "0.6.0"
itertools = "0.12.1"
ref-cast = "1.0.22"
deref_ext = { git = "https://github.com/cjwcommuny/deref_ext", rev = "2b14702" }
async-iter-ext = { git = "https://github.com/cjwcommuny/async-iter-ext", rev = "571997b" }
typed-builder = "0.18.1"
derive-getters = "0.3.0"
tokio = { version = "1.36.0", features = ["full"] }
dashmap = "5.5.3"
futures = "0.3.30"
pin-project = "1.1.5"
proptest = "1.4.0"
test-strategy = "0.3.1"

[dev-dependencies]
tempfile = "3"

[lints.rust]
unused = "allow"
unsafe_code = "forbid"
