[package]
name = "better-mini-lsm"
version = "0.1.0"
edition = "2021"
rust-version = "1.77"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
arc-swap = "1"
bytes = "1"
crossbeam-epoch = "0.9"
crossbeam-skiplist = "0.1"
parking_lot = "0.12"
ouroboros = "0.18"
moka = { version = "0.12", features = ["future"] }
clap = { version = "4.5.16", features = ["derive"] }
rand = "0.8.5"
crossbeam-channel = "0.5.13"
serde_json = { version = "1.0" }
serde = { version = "1.0", features = ["derive"] }
farmhash = "1"
nom = "7.1.3"
replace_with = "0.1.7"
byteorder = "1.5.0"
either = "1.13.0"
derive-new = "0.6.0"
itertools = "0.13.0"
ref-cast = "1.0.23"
deref_ext = { git = "https://github.com/cjwcommuny/deref_ext", rev = "2b14702" }
async-iter-ext = { git = "https://github.com/cjwcommuny/async-iter-ext", rev = "38cf62b" }
typed-builder = "0.19.1"
derive-getters = "0.5.0"
tokio = { version = "1.39.3", features = ["full"] }
dashmap = "6.0.1"
futures = "0.3.30"
pin-project = "1.1.5"
proptest = "1.5.0"
test-strategy = "0.4.0"
bytemuck = { version = "1.17.0", features = ["extern_crate_alloc", "derive"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
tokio-stream = "0.1.15"
tokio-util = "0.7.11"
futures-concurrency = "7.6.1"
ordered-float = "4.2.2"
getset = "0.1.2"
derive_more = { version = "1.0.0", features = ["full"] }
tracing-futures = { version = "0.2.5", features = ["futures-03"] }
num-traits = "0.2.19"

[dev-dependencies]
tempfile = "3"
ycsb = { git = "https://github.com/cjwcommuny/ycsb-rs.git", rev = "b82522d" }
criterion = { version = "0.5.1", features = ["async_tokio"] }
maplit = "1.0.2"

[lints.rust]
unsafe_code = "forbid"

[[bench]]
name = "ycsb"
harness = false

[profile.test]
opt-level = 3
debug = true

[profile.release]
debug = true
